Fixed some problems with the path of the files on linux and a problem with the concurrency of the NovelDatabase.novels list. Added a backup file that is created every so often so that if the program/computer has some problem, almost the entire result is saved.